# ProAndroidCppWithTheNdk

./: Android Ndk Build.md  build.gradle  readme.txt  settings.gradle
JavaSocketTest/: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
chap02-cmake/: build.gradle  swig.gradle  swig.txt
chap02-cmake/src/main/: AndroidManifest.xml
chap02-cmake/src/main/jni/: AsyncProvider.i  AsyncProvider_wrap.cxx  AsyncProvider_wrap.h  CMakeLists.txt  CppClass.i  CppClass_wrap.cxx  CppStruct.i  CppStruct_wrap.cxx  LandFace.cpp  LandFace.h  LandXml.i  LandXmlReader.cpp  LandXmlReader.hpp  LandXmlReader_wrap.cxx  LandXml_wrap.cxx  MyEnum.i  MyEnum_wrap.c  MyStruct.i  MyStruct_wrap.c  Unix.i  Unix_wrap.c  android_log.h  com_example_hellojni_HelloJni.h  hello-jni.c  my_enums.h  my_struct_cpp.cpp  my_struct_cpp.hpp
chap02-cmake/src/main/res/layout/: activity_chap02_main.xml
chap02-cmake/src/main/res/values/: strings.xml
chap02-cmake/src/main/res/values-night/: themes.xml
chap02-ndk-build/: .gitignore  AndroidManifest.xml  AndroidManifest2.xml  build.gradle  swig.txt
chap02-ndk-build/jni/: Android.mk  AsyncProvider.i  AsyncProvider_wrap.cxx  AsyncProvider_wrap.h  AsyncUidProvider.cpp  AsyncUidProvider.hpp  CppClass.i  CppClass_wrap.cxx  CppStruct.i  CppStruct_wrap.cxx  MyEnum.i  MyEnum_wrap.c  MyStruct_wrap.c  Student.cpp  Student.hpp  Unix.i  Unix_wrap.c  android_log.h  com_example_hellojni_HelloJni.h  hello-jni.c  my_number.h  my_struct.h  my_struct_cpp.cpp  my_struct_cpp.hpp  my_swig_generate.mk
chap02-ndk-build/res/layout/: activity_chap02_main.xml
chap02-ndk-build/res/values/: strings.xml  themes.xml  values.xml
chap02-ndk-build/res/values-night/: themes.xml
chap07-threads/: build.gradle
chap07-threads/src/main/: AndroidManifest.xml
chap07-threads/src/main/jni/: CMakeLists.txt  com_shenby_pacwth_chap07_threads_MainActivity.h  native.cpp
chap07-threads/src/main/res/: activity_main.xml
echo/: build.gradle
echo/src/main/: AndroidManifest.xml
echo/src/main/jni/: CMakeLists.txt  com_shenby_pacwth_echo_EchoClientActivity.h  com_shenby_pacwth_echo_EchoServerActivity.h  echo.cpp  testStdArg.c
gradle/customTask/: pugixmAssembleRelease.run.xml
gradle/wrapper/: gradle-wrapper.properties
pugixml/: build.gradle  swig.gradle
pugixml/src/main/jni/: CMakeLists.txt  LandFace.cpp  LandFace.h  LandXml.i  LandXmlReader.cpp  LandXmlReader.hpp  LandXml_wrap.cxx  NCoordinate.hpp  android_log.h
readlandxml/: build.gradle
readlandxml/src/main/: AndroidManifest.xml
(+74 files in other folders)
